--- a/src/index.css
+++ b/src/index.css
@@ -35,3 +35,15 @@ button:focus-visible {
   color: white;
 }
 
+.plant-card {
+  background-color: #DCE8D6;
+  padding: 10px;
+  margin: 10px;
+  text-align: center;
+  border-radius: 14px;
+}
+
+.plant-card img {
+  max-width: 100px;
+}
+
