--- a/src/input.css
+++ b/src/input.css
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+
+body {
+  font-family: 'Poppins', sans-serif;
+}
+html {
+  font-family: 'Poppins', sans-serif!;
+}
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
@@ -41,13 +49,38 @@ button:focus-visible {
 
 .plant-card {
   background-color: #DCE8D6;
-  padding: 10px;
-  margin: 10px;
+  padding: 10px 50px;
+  margin: 20px;
   text-align: center;
   border-radius: 14px;
+  font-family: 'Poppins';
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 700px;
+
+  max-height: 120px;
+}
+
+.plant-info {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start; 
+}
+
+.plant-link {
+  display: flex;
+  justify-content: flex-end; 
 }
 
 .plant-card img {
-  max-width: 100px;
+  height: 9em;
+  margin-bottom: 2em;
+}
+
+.plant-library{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
