--- a/src/input.css
+++ b/src/input.css
@@ -1,16 +1,18 @@
+@config "../tailwind.config.js";
 @tailwind base;
 @tailwind components;
-@tailwind utilities;
+
 
 
 body {
   font-family: 'Poppins', sans-serif;
+  overflow: scroll;
 }
 html {
   font-family: 'Poppins', sans-serif!;
 }
 
-button {
+/* button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -28,7 +30,7 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
+} */
 
 .navbar-mobile {
   position: fixed;
@@ -91,3 +93,11 @@ button:focus-visible {
   padding-top: 100px;
   padding: 100px 29px 0;
 }
+
+
+
+
+
+
+
+@tailwind utilities;
