--- a/src/input.css
+++ b/src/input.css
@@ -38,8 +38,8 @@ button:focus-visible {
   right: 0;
   display: flex;
   justify-content: space-around;
-  background-color: #333;
   padding: 10px;
+  background-color: white;
   border-radius: 28px 28px 0 0;
 }
 
