--- a/src/input.css
+++ b/src/input.css
@@ -83,6 +83,7 @@ button:focus-visible {
   justify-content: space-evenly;
   padding-top: 100px;
   padding: 100px 29px 0;
+  border-radius: 0 0 0 80px;
 }
 
 .img-no-plant{
