--- a/src/input.css
+++ b/src/input.css
@@ -84,6 +84,7 @@ button:focus-visible {
   padding-top: 100px;
   padding: 100px 29px 0;
   border-radius: 0 0 0 80px;
+  /* align-items: flex-end; */
 }
 
 .img-no-plant{
