--- a/src/input.css
+++ b/src/input.css
@@ -136,7 +136,7 @@ button:hover {
 .container{
   height: 100vh;
   display: flex;
-  /* justify-content: center; */
+  margin-bottom: 100px;
   align-items: center;
   align-content: center;
 }
